# context-learning-trajectory-generator

./: .env.example  .gitignore  README.md  pyproject.toml
data/: cli_tools.json  js_ts_packages.json  python_packages.json
docs/: claude-agent-sdk-typescript-references.md  claude-downgrade-version.md  context-learning-project.md  project-info.md
generator/: __main__.py  batch_state.py  cli.py  config.py  pipeline.py
generator/capture/: exporter.py  recorder.py
generator/llm/: client.py  prompts.py
generator/models/: __init__.py  conversation.py  project.py  requirement.py  review.py  trajectory.py
generator/project_access/: cloner.py  workspace.py
generator/stages/: analyzer.py  coder_agent.py  reviewer_agent.py  user_agent.py
generator/tools/: definitions.py  executor.py  registry.py
output/: batch_cli_800.json
