[project]
name = "context-learning-generator"
version = "0.1.0"
description = "Context Learning Trajectory Generator - generates agent trajectory training data from open-source projects"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
